1.1.5 (????????????????) 
 - irc input now stores nick

1.1.4 (October 28, 2012)
 ## Overview of this release:
 - bug fixes mostly

 ## filters
 - date: Fix crashing on date filter failures. Wrote test to cover this case.
   (LOGSTASH-641)
 - grok: Improve QUOTEDSTRING pattern to avoid some more 'watchdog timeout' problems

 ## outputs
 - nagios_nsca: Allow check status to be set from the event (#228, patch by
   Tomas Doran)
 - elasticsearch_http: Fix OpenSSL::X509::StoreError (LOGSTASH-642)

1.1.3 (October 22, 2012)
 - rebuilt 1.1.2 for java 5 and 6

1.1.2 (October 22, 2012)
 ## Overview of this release:
  * New input plugins: lumberjack, sqs, relp
  * New output plugins: exec, sqs
  * New filter plugins: kv, geoip, urldecode, alter
  * file input supports backfill via 'start_position'
  * filter watchdog timer set to 10 seconds (was 2 seconds)

 ## general
 - Stopped using 'Gemfile' for dependencies, the logstash.gemspec has returned.
   (Patch by Grant Rogers)
 - New 'logstash-event.gemspec' for generating logstash events in your own
   ruby programs (Patch by Garry Shutler)
 - Wildcard config files are now sorted properly (agent -f
   /etc/logstash/*.conf)
 - The old '-vvv' setting ruby's internal $DEBUG is now gone. It was causing
   too much confusion for users due to noise.
 - Improved 'logstash event' creation speed by 3.5x
 - Now uses JRuby 1.7.0
 - Now ships with Elasticsearch 0.19.10

 ## inputs
 - bugfix: redis: [LOGSTASH-526] fix bug with password passing
 - new: lumberjack: for use with the lumberjack log shipper 
   (https://github.com/jordansissel/lumberjack)
 - new: sqs: Amazon SQS input (Patch by Sean Laurent, #211)
 - new: relp: RELP (rsyslog) plugin (Patch by Mike Worth, #177)
 - file input: sincedb path is now automatically generated if not specified.
   This helps work around a problem where two file inputs don't specify a
   sincedb_path would clobber eachother (LOGSTASH-554)